# aitw-target

./: .env.example  .gitignore  Makefile  README.md  SECURITY.md  constraints.txt  deployment.yaml  provider.py  pyproject.toml  secret_guard_local.example.yaml
.github/workflows/: ci.yml
schemas/: telemetry_record.schema.json
scripts/: acceptance_selfcheck.py  label_scan.py
src/agent_runtime/: __init__.py
src/agent_runtime/control/: __init__.py  broker.py  bulletin.py  egress.py  enforcing_registry.py
src/agent_runtime/safety/: __init__.py  dependency_guard.py  output_scanner.py  reset.py  scoped_store.py  secret_guard.py
tests/: test_provider_acceptance.py
